IssueID 963: Labels too long
git-svn-id: https://build.archivesportaleurope.net/svn/apex-cms/branches/frontend-project-1.5@1157 8f6216c4-6850-4946-a993-29be1cf876c3

--- a/ape-theme/src/main/webapp/css/custom-portlet-advancedsearch.css
+++ b/ape-theme/src/main/webapp/css/custom-portlet-advancedsearch.css
@@ -128,7 +128,6 @@
 #advancedSearchPortlet #advancedSearch table {
 	padding: 0px;
 	margin: 0px;
-	font-size: 12px;
 	border-collapse: collapse;
 }
 
